--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,41 @@
-aiohttp==3.8.6
+aiohttp==3.9.1
 aiosignal==1.3.1
 annotated-types==0.6.0
-anyio==3.7.1
-async-timeout==4.0.3
-attrs==23.1.0
-certifi==2023.7.22
-charset-normalizer==3.3.1
+anyio==4.2.0
+attrs==23.2.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
 click==8.1.7
-dataclasses-json==0.6.1
+dataclasses-json==0.6.3
 diskcache==5.6.3
-fastapi==0.104.0
-frozenlist==1.4.0
+fastapi==0.109.0
+frozenlist==1.4.1
 h11==0.14.0
-idna==3.4
+idna==3.6
+Jinja2==3.1.3
 jsonpatch==1.33
 jsonpointer==2.4
-langchain==0.0.324
-langsmith==0.0.52
-llama_cpp_python==0.2.11
-marshmallow==3.20.1
+langchain==0.1.4
+langchain-community==0.0.16
+langchain-core==0.1.16
+langsmith==0.0.83
+llama_cpp_python==0.2.34
+MarkupSafe==2.1.4
+marshmallow==3.20.2
 multidict==6.0.4
 mypy-extensions==1.0.0
-numpy==1.26.1
+numpy==1.26.3
 packaging==23.2
-pydantic==2.4.2
-pydantic_core==2.10.1
+pydantic==2.5.3
+pydantic_core==2.14.6
 PyYAML==6.0.1
 requests==2.31.0
 sniffio==1.3.0
-SQLAlchemy==2.0.22
-starlette==0.27.0
+SQLAlchemy==2.0.25
+starlette==0.35.1
 tenacity==8.2.3
 typing-inspect==0.9.0
-typing_extensions==4.8.0
-urllib3==2.0.7
-uvicorn==0.23.2
-yarl==1.9.2
+typing_extensions==4.9.0
+urllib3==2.1.0
+uvicorn==0.27.0
+yarl==1.9.4
