--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,12 @@ click==8.1.7
 dataclasses-json==0.6.3
 diskcache==5.6.3
 fastapi==0.109.0
+filelock==3.13.1
 frozenlist==1.4.1
+fsspec==2023.12.2
 h11==0.14.0
+huggingface-cli==0.1
+huggingface-hub==0.20.3
 idna==3.6
 Jinja2==3.1.3
 jsonpatch==1.33
@@ -19,7 +23,7 @@ langchain==0.1.4
 langchain-community==0.0.16
 langchain-core==0.1.16
 langsmith==0.0.83
-llama_cpp_python==0.2.34
+llama_cpp_python==0.2.37
 MarkupSafe==2.1.4
 marshmallow==3.20.2
 multidict==6.0.4
@@ -34,6 +38,7 @@ sniffio==1.3.0
 SQLAlchemy==2.0.25
 starlette==0.35.1
 tenacity==8.2.3
+tqdm==4.66.1
 typing-inspect==0.9.0
 typing_extensions==4.9.0
 urllib3==2.1.0
